# Micro-Engine

./: .clang-format  AGENTS.md  CMakeLists.txt  Dependencies.cmake  ROADMAP.md
.github/workflows/: linux-build.yml  macos-build.yml  tests.yml  windows-build.yml
Editor/: CMakeLists.txt  default.ini
Editor/Source/: Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h  main.cpp  pch.h
Editor/Source/Core/View/: ConsoleView.cpp  ConsoleView.h  SceneLogView.cpp  SceneLogView.h  SceneView.cpp  SceneView.h
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Resources/: Startup.scene
Engine/Source/: main.cpp  pch.h
Engine/Source/Assets/: AssetID.h  AssetRef.h  AssetReference.h  AssetResolver.cpp  AssetResolver.h  AssetsDatabase.cpp  AssetsDatabase.h
Engine/Source/Core/: Engine.cpp  Engine.h  GUID.cpp  GUID.h  Log.cpp  Log.h  Types.h
Engine/Source/Game/: DefaultGame.cpp  DefaultGame.h  GameBase.cpp  GameBase.h
Engine/Source/Gameplay/: ButtonComponent.cpp  ButtonComponent.h  Component.h  GameObject.cpp  GameObject.h  GameObjectsPool.h  GraphicComponent.h  MeshComponent.h  Scene.cpp  Scene.h  SpriteComponent.h  StaticMeshComponent.h  TextComponent.cpp  TextComponent.h  Transform2DComponent.h  TransformComponent.h
Engine/Source/Gameplay/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ImageComponent.cpp  ImageComponent.h  MeshComponent.cpp  MeshComponent.h  PrimitiveMeshComponent.cpp  PrimitiveMeshComponent.h  PrimitiveShape.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Source/Gameplay/Managers/: SceneManager.cpp  SceneManager.h
Engine/Source/Gameplay/Systems/: RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp  TransformSystem.h  TransformUtils.h
Engine/Source/Managers/: SceneManager.cpp  SceneManager.h
Engine/Source/Memory/: ArenaAllocator.h
Engine/Source/Serialization/Reflection/: Macros.h  TypeDescriptor.h  TypeRegistry.cpp  TypeRegistry.h
Engine/Source/Serialization/Scene/: SceneLoader.cpp  SceneLoader.h  SceneSaver.cpp  SceneSaver.h
Engine/Source/Serialization/YAML/: YamlComponentSerializer.cpp  YamlComponentSerializer.h
Engine/Source/Services/: AssetsService.cpp  AssetsService.h  SceneService.cpp  SceneService.h  Service.h  ServiceLocator.cpp  ServiceLocator.h  SettingsService.h
Engine/Source/Settings/: AssetsDatabaseSettings.h  ProjectSettings.h  Settings.h
Engine/Source/Systems/: InitSystem.cpp  InitSystem.h  LateUpdateSystem.cpp  LateUpdateSystem.h  RenderSystem.cpp  ResizeWindowSystem.cpp  ResizeWindowSystem.h  ShutdownSystem.cpp  ShutdownSystem.h  System.h  SystemRegistry.cpp  SystemRegistry.h  TransformSystem.cpp  TransformSystem.h  UpdateSystem.cpp  UpdateSystem.h
Engine/Source/UI/Components/: ImageComponent.cpp  ImageComponent.h
Games/: CMakeLists.txt
Games/Pong/: CMakeLists.txt
Games/Pong/Source/: PongGame.cpp  PongGame.h  main.cpp
Tests/: CMakeLists.txt
Tests/Source/: TransformTests.cpp
